[project]
name = "DAESIM_preprocess"
version = "0.0.6"
authors = [
  { name="Christopher Bradley", email="christopher.bradley@anu.edu.au" },
]
description = "Harvesting environmental forcing data for running the Dynamic Agro-Ecosystem Simulator (DAESIM)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "rioxarray",
    "pandas",
    "scipy",
    "requests",
    "pysheds",
    "owslib",
    "pyproj",
    "matplotlib",
    "netcdf4"
]
# If in future there are issues with dependencies, try using the exact versions specified in requirements.txt along with python=3.11
# conda create --name DAESIM_preprocess_3.11 python=3.11
# pip install -r requirements.txt

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupytext",
    "pytest",
    "twine",
    "build"
]

[project.urls]
Homepage = "https://github.com/ChristopherBradley/DAESIM_preprocess"

[tool.setuptools.packages.find]
include = ["DAESIM_preprocess", "DAESIM_preprocess.*"]